fix: align status indicator table to grid

--- a/src/components/StatusIndicatorTable/StatusIndicator.module.scss
+++ b/src/components/StatusIndicatorTable/StatusIndicator.module.scss
@@ -6,7 +6,10 @@
 .iconGroup {
   padding: 1rem;
   display: flex;
-  width: 50%;
+
+  @include carbon--breakpoint('lg') {
+    width: 80px;
+  }
 }
 
 .iconGroup.isDark {
